--- a/tradingKulture/src/package.json
+++ b/tradingKulture/src/package.json
@@ -48,6 +48,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^12.2.0",
     "gsap": "^3.12.5",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
